# solar-battery-simulator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  HOW_TO_USE.md  LICENSE  README.md  battery_simulator.py  consumption.csv  data.csv  docker-compose.yml  gui.py  power_flow_simulator.py  production.csv  pyproject.toml  renovate.json
.github/workflows/: tests.yml
tests/: conftest.py  test_costs.py  test_gui.py  test_heating_load.py  test_integration.py  test_simulation.py
